# slot_engine

./: .gitignore  CMakeLists.txt  game_def.h  platform.h
engine/: effect_mgr.c  effect_mgr.h  input_mgr.c  input_mgr.h  reel_ctrl.c  reel_ctrl.h  rng.c  rng.h  save_mgr.c  save_mgr.h  slot_engine.c  slot_engine.h  timing.c  timing.h
platform/: platform_cli.c  platform_cli.h
targets/cli/: main_cli.c  renderer_cli.c  renderer_cli.h
titles/simple_fruit/: fruit_config.h  fruit_game.c  fruit_game.h  fruit_judge.c  fruit_judge.h
